// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fulfillmentInboundShipment confirmPreorder returns confirmed dates if succesful 1`] = `
Array [
  Object {
    "ConfirmedFulfillableDate": "2015-12-31",
    "ConfirmedNeedByDate": "2015-12-27",
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;

exports[`fulfillmentInboundShipment createInboundShipment returns the shipment ID if succesful 1`] = `
Array [
  Object {
    "ShipmentId": "FBA2F50GYX",
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;

exports[`fulfillmentInboundShipment createInboundShipmentPlan returns inbound shipment plans if succesful 1`] = `
Array [
  Object {
    "InboundShipmentPlans": Array [
      Object {
        "DestinationFulfillmentCenterId": "String",
        "EstimatedBoxContentsFee": Object {
          "FeePerUnit": Object {
            "CurrencyCode": "String",
            "Value": "100",
          },
          "TotalFee": Object {
            "CurrencyCode": "String",
            "Value": "100",
          },
          "TotalUnits": 1,
        },
        "Items": Array [
          Object {
            "FulfillmentNetworkSKU": "String",
            "PrepDetailsList": Array [
              Object {
                "PrepInstruction": "String",
                "PrepOwner": "String",
              },
            ],
            "Quantity": 1,
            "SellerSKU": "String",
          },
        ],
        "LabelPrepType": "String",
        "ShipToAddress": Object {
          "AddressLine1": "String",
          "AddressLine2": "String",
          "City": "String",
          "CountryCode": "String",
          "DistrictOrCounty": "String",
          "Name": "String",
          "PostalCode": "String",
          "StateOrProvinceCode": "String",
        },
        "ShipmentId": "String",
      },
    ],
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;

exports[`fulfillmentInboundShipment getInboundGuidanceForAsin returns sku inbound guidance list if succesful 1`] = `
Array [
  Object {
    "ASINInboundGuidanceList": Array [
      Object {
        "ASIN": "B00005N5PF",
        "GuidanceReasonList": Array [
          "SlowMovingASIN",
        ],
        "InboundGuidance": "InboundNotRecommended",
      },
    ],
    "InvalidASINList": Array [],
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;

exports[`fulfillmentInboundShipment getInboundGuidanceForSku returns sku inbound guidance list if succesful 1`] = `
Array [
  Object {
    "InvalidSKUList": Array [],
    "SKUInboundGuidanceList": Array [
      Object {
        "ASIN": "B00005N5PF",
        "GuidanceReasonList": Array [
          "SlowMovingASIN",
        ],
        "InboundGuidance": "InboundNotRecommended",
        "SellerSKU": "us001",
      },
    ],
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;

exports[`fulfillmentInboundShipment getPreorderInfo returns preorderinfo if succesful 1`] = `
Array [
  Object {
    "ConfirmedFulfillableDate": "2015-12-31",
    "NeedByDate": "2015-12-27",
    "ShipmentConfirmedForPreorder": true,
    "ShipmentContainsPreorderableItems": true,
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;

exports[`fulfillmentInboundShipment getPrepInstructionsForSku returns prep instructions list if succesful 1`] = `
Array [
  Object {
    "InvalidSKUList": Array [],
    "SKUPrepInstructionsList": Array [
      Object {
        "ASIN": "B00EXAMPLE",
        "AmazonPrepFeesDetailsList": Array [
          Object {
            "FeePerUnit": Object {
              "CurrencyCode": "USD",
              "Value": "0.2",
            },
            "PrepInstruction": "Polybagging",
          },
          Object {
            "FeePerUnit": Object {
              "CurrencyCode": "USD",
              "Value": "0.2",
            },
            "PrepInstruction": "Taping",
          },
          Object {
            "FeePerUnit": Object {
              "CurrencyCode": "USD",
              "Value": "0.2",
            },
            "PrepInstruction": "Labeling",
          },
        ],
        "BarcodeInstruction": "RequiresFNSKULabel",
        "PrepGuidance": "SeePrepInstructionsList",
        "PrepInstructionList": Array [
          "Polybagging",
          "Taping",
          "Labeling",
        ],
        "SellerSKU": "ca_001",
      },
    ],
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;

exports[`fulfillmentInboundShipment getServiceStatus returns a parsed model when the status response is valid 1`] = `
Array [
  Object {
    "Status": "GREEN",
    "Timestamp": "2020-05-06T08:22:23.582Z",
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;

exports[`fulfillmentInboundShipment updateInboundShipment return the shipment id if succesful 1`] = `
Array [
  Object {
    "ShipmentId": "FBA2F50GYX",
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;
